@@ -4,8 +4,8 @@ import by.fpmibsu.edudocs.entities.AdministrationMember;
 import by.fpmibsu.edudocs.entities.Professor;
 import by.fpmibsu.edudocs.entities.Student;
 import by.fpmibsu.edudocs.entities.User;
-import main.java.by.avelana.library.domain.*;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -20,11 +20,13 @@ public class ValidatorFactory {
 	}
 
 	@SuppressWarnings("unchecked")
-	public static <Type extends Entity> Validator<Type> createValidator(Class<Type> entity) {
+	public static <Type extends User> Validator<Type> createValidator(Class<Type> entity) {
 		try {
-			return (Validator<Type>)validators.get(entity).newInstance();
+			return (Validator<Type>)validators.get(entity).getDeclaredConstructor().newInstance();
 		} catch(InstantiationException | IllegalAccessException e) {
 			return null;
+		} catch (InvocationTargetException | NoSuchMethodException e) {
+			throw new RuntimeException(e);
 		}
 	}
 }
